# ai-butler

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  config.py  docker-compose.yml  environment.py  main.py  makefile  manage.py  package-lock.json  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  train.py  trainerbak.py
.envs/: .dev.example  .prod.example
aibutler-backend/: .gitignore  Dockerfile  README.md  environment.py  main.py  manage.py
aibutler-backend/.envs/: .local.example
aibutler-backend/celery_app/: __init__.py  tasks.py
aibutler-backend/common/: authentication.py  base_pydantic.py  custom_route.py  db.py  db_signal.py  minio_client.py  permission.py  response.py
aibutler-backend/conf/: routers.py  settings.py
aibutler-frontend/: README.md  tsconfig.base.json
apps/: api.py
apps/account/: apis.py
apps/frontend/: .env.development  .env.production  index.html
celery_app/: app.py
common/: const.py  const_menu.py  depends.py  enums.py  lifespan.py  logger.py  response.py
common/commands/: __init__.py
common/exceptions/: __init__.py  handler.py
common/middleware/: __init__.py  (+2 more)
conf/: routers.py  settings.py
data/: coco128_1710468896.yaml  requirements-cpu.txt
deploy-predict/: .envs.example  README.md  requirements.txt
minio/: init.sh
mysql/: my.cnf
onnx-predict/: .gitignore  Dockerfile  makefile  pyproject.toml
onnx-predict/common/: depends.py  lifespan.py
onnx-predict/common/exceptions/: handler.py
onnx-predict/common/middleware/: __init__.py
onnx-predict/onnx_predict/: image_classify_predict.py  object_detection_predict.py  utils.py
paddle-image-classify/: .envs.example  .gitignore  Dockerfile.gpu  ai_butler_sdk_test.py  makefile  pyproject.toml  requirements-gpu.txt
pytorch-object-detection/: .envs.example  api_trainer.py  demo.py  docker-compose.yml  download_weights.py  exporter.py  pyproject.toml  requirements.txt  train_company.py  trainer.py
redis/: redis.conf
tools/: config_tools.py
utils/: datasetpre.py  yamlconfig.py  zipfolder.py
(+165 files in other folders)
