[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
line-length = 120
exclude = [".mypy_cache", ".*", "logs", "static", "migrations"]

[tool.poetry]
name = "onnxpredict"
version = "0.1.0"
description = ""
authors = ["王凡 <wangfan@keanbang.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
onnxruntime = "^1.17.1"
opencv-python = "^4.9.0.80"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
uvicorn = "^0.27.1"
httpx = "^0.27.0"
python-multipart = "^0.0.9"


[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
